src/com/company/lambdaPlusMiniJavaParser.java
// Generated from C:/Users/erics/Desktop/Compiler/MiniJavaCompiler/src/com/company\lambdaPlusMiniJava.g4 by ANTLR 4.8

    package com.company;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class lambdaPlusMiniJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, CLASS=2, PUBLIC=3, STATIC=4, VOID=5, MAIN=6, EXTENDS=7, FOR=8, 
		WHILE=9, IF=10, ELSE=11, RETURN=12, THIS=13, NEW=14, PRINT=15, LENGTH=16, 
		INT=17, BOOLEAN=18, STRING=19, BOOLEAN_LITERAL=20, LEFT_PARENTHESIS=21, 
		RIGHT_PARENTHESIS=22, LBRACKET=23, RBRACKET=24, LSQUARE_BRACKET=25, RSQUARE_BRACKET=26, 
		DOT=27, NOT=28, EQUALS=29, QMARK=30, COLON=31, SEMICOLON=32, OPERATOR=33, 
		SIGN=34, INT_LITERAL=35, ID=36, WHITESPACE=37, MULTI_LINE_COMMENT=38, 
		COMMENT=39;
	public static final int
		RULE_goal = 0, RULE_mainClass = 1, RULE_classDeclaration = 2, RULE_varDeclaration = 3, 
		RULE_methodDeclaration = 4, RULE_parameters = 5, RULE_methodBody = 6, 
		RULE_type = 7, RULE_statement = 8, RULE_expression = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"goal", "mainClass", "classDeclaration", "varDeclaration", "methodDeclaration", 
			"parameters", "methodBody", "type", "statement", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'class'", "'public'", "'static'", "'void'", "'main'", "'extends'", 
			"'for'", "'while'", "'if'", "'else'", "'return'", "'this'", "'new'", 
			"'System.out.println'", "'length'", "'int'", "'boolean'", "'String'", 
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "'!'", "'='", 
			"'?'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "CLASS", "PUBLIC", "STATIC", "VOID", "MAIN", "EXTENDS", "FOR", 
			"WHILE", "IF", "ELSE", "RETURN", "THIS", "NEW", "PRINT", "LENGTH", "INT", 
			"BOOLEAN", "STRING", "BOOLEAN_LITERAL", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", 
			"LBRACKET", "RBRACKET", "LSQUARE_BRACKET", "RSQUARE_BRACKET", "DOT", 
			"NOT", "EQUALS", "QMARK", "COLON", "SEMICOLON", "OPERATOR", "SIGN", "INT_LITERAL", 
			"ID", "WHITESPACE", "MULTI_LINE_COMMENT", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lambdaPlusMiniJava.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lambdaPlusMiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GoalContext extends ParserRuleContext {
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public TerminalNode EOF() { return getToken(lambdaPlusMiniJavaParser.EOF, 0); }
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public TerminalNode LEFT_PARENTHESIS() { return getToken(lambdaPlusMiniJavaParser.LEFT_PARENTHESIS, 0); }
		public List<TerminalNode> RIGHT_PARENTHESIS() { return getTokens(lambdaPlusMiniJavaParser.RIGHT_PARENTHESIS); }
		public TerminalNode RIGHT_PARENTHESIS(int i) {
			return getToken(lambdaPlusMiniJavaParser.RIGHT_PARENTHESIS, i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lambdaPlusMiniJavaListener ) ((lambdaPlusMiniJavaListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lambdaPlusMiniJavaListener ) ((lambdaPlusMiniJavaListener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lambdaPlusMiniJavaVisitor ) return ((lambdaPlusMiniJavaVisitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		int _la;
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(20);
				mainClass();
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CLASS) {
					{
					{
					setState(21);
					classDeclaration();
					}
					}
					setState(26);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(27);
				match(EOF);
				}
				break;
			case LEFT_PARENTHESIS:
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				match(LEFT_PARENTHESIS);
				setState(30);
				classDeclaration();
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==RIGHT_PARENTHESIS) {
					{
					{
					setState(31);
					match(RIGHT_PARENTHESIS);
					}
					}
					setState(36);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(37);
				match(EOF);
				notifyErrorListeners("missing Main class");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(lambdaPlusMiniJavaParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(lambdaPlusMiniJavaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(lambdaPlusMiniJavaParser.ID, i);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(lambdaPlusMiniJavaParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(lambdaPlusMiniJavaParser.LBRACKET, i);
		}
		public TerminalNode PUBLIC() { return getToken(lambdaPlusMiniJavaParser.PUBLIC, 0); }
		public TerminalNode STATIC() { return getToken(lambdaPlusMiniJavaParser.STATIC, 0); }
		public TerminalNode VOID() { return getToken(lambdaPlusMiniJavaParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(lambdaPlusMiniJavaParser.MAIN, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(lambdaPlusMiniJavaParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode STRING() { return getToken(lambdaPlusMiniJavaParser.STRING, 0); }
		public TerminalNode LSQUARE_BRACKET() { return getToken(lambdaPlusMiniJavaParser.LSQUARE_BRACKET, 0); }
		public TerminalNode RSQUARE_BRACKET() { return getToken(lambdaPlusMiniJavaParser.RSQUARE_BRACKET, 0); }
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(lambdaPlusMiniJavaParser.RIGHT_PARENTHESIS, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(lambdaPlusMiniJavaParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(lambdaPlusMiniJavaParser.RBRACKET, i);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lambdaPlusMiniJavaListener ) ((lambdaPlusMiniJavaListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lambdaPlusMiniJavaListener ) ((lambdaPlusMiniJavaListener)listener).exitMainClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lambdaPlusMiniJavaVisitor ) return ((lambdaPlusMiniJavaVisitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(CLASS);
				setState(43);
				match(ID);
				setState(44);
				match(LBRACKET);
				setState(45);
				match(PUBLIC);
				setState(46);
				match(STATIC);
				setState(47);
				match(VOID);
				setState(48);
				match(MAIN);
				setState(49);
				match(LEFT_PARENTHESIS);
				setState(50);
				match(STRING);
				setState(51);
				match(LSQUARE_BRACKET);
				setState(52);
				match(RSQUARE_BRACKET);
				setState(53);
				match(ID);
				setState(54);
				match(RIGHT_PARENTHESIS);
				setState(55);
				match(LBRACKET);
				setState(56);
				statement(0);
				setState(57);
				match(RBRACKET);
				setState(58);
				match(RBRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(CLASS);
				setState(61);
				match(LBRACKET);
				setState(62);
				match(PUBLIC);
				setState(63);
				match(STATIC);
				setState(64);
				match(VOID);
				setState(65);
				match(MAIN);
				setState(66);
				match(LEFT_PARENTHESIS);
				setState(67);
				match(STRING);
				setState(68);
				match(LSQUARE_BRACKET);
				setState(69);
				match(RSQUARE_BRACKET);
				setState(70);
				match(ID);
				setState(71);
				match(RIGHT_PARENTHESIS);
				setState(72);
				match(LBRACKET);
				setState(73);
				statement(0);
				setState(74);
				match(RBRACKET);
				setState(75);
				match(RBRACKET);
				notifyErrorListeners("missing main class name");
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(CLASS);
				setState(79);
				match(ID);
				setState(80);
				match(LBRACKET);
				setState(81);
				match(STATIC);
				setState(82);
				match(VOID);
				setState(83);
				match(MAIN);
				setState(84);
				match(LEFT_PARENTHESIS);
				setState(85);
				match(STRING);
				setState(86);
				match(LSQUARE_BRACKET);
				setState(87);
				match(RSQUARE_BRACKET);
				setState(88);
				match(ID);
				setState(89);
				match(RIGHT_PARENTHESIS);
				setState(90);
				match(LBRACKET);
				setState(91);
				statement(0);
				setState(92);
				match(RBRACKET);
				setState(93);
				match(RBRACKET);
				notifyErrorListeners("missing key word 'public' in main class declaration");
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				match(CLASS);
				setState(97);
				match(ID);
				setState(98);
				match(LBRACKET);
				setState(99);
				match(PUBLIC);
				setState(100);
				match(VOID);
				setState(101);
				match(MAIN);
				setState(102);
				match(LEFT_PARENTHESIS);
				setState(103);
				match(STRING);
				setState(104);
				match(LSQUARE_BRACKET);
				setState(105);
				match(RSQUARE_BRACKET);
				setState(106);
				match(ID);
				setState(107);
				match(RIGHT_PARENTHESIS);
				setState(108);
				match(LBRACKET);
				setState(109);
				statement(0);
				setState(110);
				match(RBRACKET);
				setState(111);
				match(RBRACKET);
				notifyErrorListeners("missing key word 'static' in main class declaration");
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				match(CLASS);
				setState(115);
				match(ID);
				setState(116);
				match(LBRACKET);
				setState(117);
				match(PUBLIC);
				setState(118);
				match(STATIC);
				setState(119);
				match(MAIN);
				setState(120);
				match(LEFT_PARENTHESIS);
				setState(121);
				match(STRING);
				setState(122);
				match(LSQUARE_BRACKET);
				setState(123);
				match(RSQUARE_BRACKET);
				setState(124);
				match(ID);
				setState(125);
				match(RIGHT_PARENTHESIS);
				setState(126);
				match(LBRACKET);
				setState(127);
				statement(0);
				setState(128);
				match(RBRACKET);
				setState(129);
				match(RBRACKET);
				notifyErrorListeners("missing key word 'void' in main class declaration");
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				match(CLASS);
				setState(133);
				match(ID);
				setState(134);
				match(LBRACKET);
				setState(135);
				match(PUBLIC);
				setState(136);
				match(STATIC);
				setState(137);
				match(VOID);
				setState(138);
				match(LEFT_PARENTHESIS);
				setState(139);
				match(STRING);
				setState(140);
				match(LSQUARE_BRACKET);
				setState(141);
				match(RSQUARE_BRACKET);
				setState(142);
				match(ID);
				setState(143);
				match(RIGHT_PARENTHESIS);
				setState(144);
				match(LBRACKET);
				setState(145);
				statement(0);
				setState(146);
				match(RBRACKET);
				setState(147);
				match(RBRACKET);
				notifyErrorListeners("missing key word 'main' in main class declaration");
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(150);
				match(CLASS);
				setState(151);
				match(ID);
				setState(152);
				match(LBRACKET);
				setState(153);
				match(PUBLIC);
				setState(154);
				match(STATIC);
				setState(155);
				match(VOID);
				setState(156);
				match(MAIN);
				setState(157);
				match(LEFT_PARENTHESIS);
				setState(158);
				match(STRING);
				setState(159);
				match(LSQUARE_BRACKET);
				setState(160);
				match(RSQUARE_BRACKET);
				setState(161);
				match(ID);
				setState(162);
				match(RIGHT_PARENTHESIS);
				setState(163);
				match(LBRACKET);
				setState(164);
				statement(0);
				setState(165);
				match(RBRACKET);
				notifyErrorListeners("Main class declaration missing right bracket");
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(168);
				match(CLASS);
				setState(169);
				match(ID);
				setState(170);
				match(PUBLIC);
				setState(171);
				match(STATIC);
				setState(172);
				match(VOID);
				setState(173);
				match(MAIN);
				setState(174);
				match(LEFT_PARENTHESIS);
				setState(175);
				match(STRING);
				setState(176);
				match(LSQUARE_BRACKET);
				setState(177);
				match(RSQUARE_BRACKET);
				setState(178);
				match(ID);
				setState(179);
				match(RIGHT_PARENTHESIS);
				setState(180);
				match(LBRACKET);
				setState(181);
				statement(0);
				setState(182);
				match(RBRACKET);
				setState(183);
				match(RBRACKET);
				notifyErrorListeners("Main class declaration missing left bracket");
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(186);
				match(CLASS);
				setState(187);
				match(ID);
				setState(188);
				match(LBRACKET);
				setState(189);
				match(PUBLIC);
				setState(190);
				match(STATIC);
				setState(191);
				match(VOID);
				setState(192);
				match(MAIN);
				setState(193);
				match(LEFT_PARENTHESIS);
				setState(194);
				match(STRING);
				setState(195);
				match(LSQUARE_BRACKET);
				setState(196);
				match(RSQUARE_BRACKET);
				setState(197);
				match(ID);
				setState(198);
				match(RIGHT_PARENTHESIS);
				setState(199);
				match(LBRACKET);
				setState(200);
				match(RBRACKET);
				setState(201);
				match(RBRACKET);
				notifyErrorListeners("Empty main class body");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(lambdaPlusMiniJavaParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(lambdaPlusMiniJavaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(lambdaPlusMiniJavaParser.ID, i);
		}
		public TerminalNode LBRACKET() { return getToken(lambdaPlusMiniJavaParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(lambdaPlusMiniJavaParser.RBRACKET, 0); }
		public TerminalNode EXTENDS() { return getToken(lambdaPlusMiniJavaParser.EXTENDS, 0); }
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lambdaPlusMiniJavaListener ) ((lambdaPlusMiniJavaListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lambdaPlusMiniJavaListener ) ((lambdaPlusMiniJavaListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lambdaPlusMiniJavaVisitor ) return ((lambdaPlusMiniJavaVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDeclaration);
		int _la;
		try {
			int _alt;
			setState(274);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(205);
				match(CLASS);
				setState(206);
				match(ID);
				setState(209);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXTENDS) {
					{
					setState(207);
					match(EXTENDS);
					setState(208);
					match(ID);
					}
				}

				setState(211);
				match(LBRACKET);
				setState(215);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(212);
						varDeclaration();
						}
						} 
					}
					setState(217);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << INT) | (1L << BOOLEAN) | (1L << ID))) != 0)) {
					{
					{
					setState(218);
					methodDeclaration();
					}
					}
					setState(223);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(224);
				match(RBRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(225);
				match(CLASS);
				setState(226);
				match(ID);
				setState(229);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXTENDS) {
					{
					setState(227);
					match(EXTENDS);
					setState(228);
					match(ID);
					}
				}

				setState(231);
				match(LBRACKET);
				setState(232);
				match(RBRACKET);
				notifyErrorListeners("Empty class body");
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(234);
				match(CLASS);
				setState(235);
				match(ID);
				setState(238);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXTENDS) {
					{
					setState(236);
					match(EXTENDS);
					setState(237);
					match(ID);
					}
				}

				setState(243);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(240);
						varDeclaration();
						}
						} 
					}
					setState(245);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(249);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << INT) | (1L << BOOLEAN) | (1L << ID))) != 0)) {
					{
					{
					setState(246);
					methodDeclaration();
					}
					}
					setState(251);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(252);
				match(RBRACKET);
				notifyErrorListeners("Class declaration missing right bracket");
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(254);
				match(CLASS);
				setState(255);
				match(ID);
				setState(258);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXTENDS) {
					{
					setState(256);
					match(EXTENDS);
					setState(257);
					match(ID);
					}
				}
